--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\faith\\anaconda3\\envs\\ai\\python.exe"
+    "python.pythonPath": "C:\\Users\\nicho\\anaconda3\\envs\\AI\\python.exe"
 }
